fixed invitation style and body style (wrong font import)

--- a/client/pages/Login/login.scss
+++ b/client/pages/Login/login.scss
@@ -20,6 +20,7 @@ $login-height: 50vh;
     transition: all 0.2s;
     cursor: pointer;
     outline: none;
+    text-decoration: none;
   }
 
   .btn {
